Added  Total booking filter

--- a/DataAnalyzerTavisca/Web.config
+++ b/DataAnalyzerTavisca/Web.config
@@ -9,7 +9,9 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
-  
+  <connectionStrings>
+    <add name="dbconnection" connectionString="Data Source=54.86.216.216;Initial Catalog=qaTripDataWareHouse_Sync;User ID=readonlynewbies2018;Password=Tavisca@123"/>
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
