--- a/Database/TaviscaDataAnalyzerDatabase.csproj
+++ b/Database/TaviscaDataAnalyzerDatabase.csproj
@@ -44,15 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Cities.cs" />
-    <Compile Include="Models\FailuresInBooking.cs" />
-    <Compile Include="Models\HotelBookingDates.cs" />
-    <Compile Include="Models\HotelNamesWithBookings.cs" />
-    <Compile Include="Models\IndividualSupplierBookings.cs" />
-    <Compile Include="Models\LocationWithDates.cs" />
-    <Compile Include="Models\PaymentDetails.cs" />
+    <Compile Include="Models\Hotels\Cities.cs" />
+    <Compile Include="Models\Hotels\FailuresInBooking.cs" />
+    <Compile Include="Models\Hotels\HotelBookingDates.cs" />
+    <Compile Include="Models\Hotels\HotelNamesWithBookings.cs" />
+    <Compile Include="Models\Hotels\IndividualSupplierBookings.cs" />
+    <Compile Include="Models\Hotels\LocationWithDates.cs" />
+    <Compile Include="Models\Hotels\PaymentDetails.cs" />
+    <Compile Include="Models\Hotels\TotalHotelBookings.cs" />
     <Compile Include="Models\QueryFormat.cs" />
-    <Compile Include="Models\TotalHotelBookings.cs" />
     <Compile Include="SqlConnector.cs" />
     <Compile Include="SqlDatabase.cs" />
     <Compile Include="IRepository.cs" />
